# Rust-FullStack-ChatApp

./: .env  .gitignore  Cargo.toml  REPORT.md  diesel.toml
admin/: Cargo.toml
admin/src/: main.rs
backend/: Cargo.toml  Rocket.toml  build.rs
backend/src/: db.rs  errors.rs  lib.rs  main.rs  routes.rs  state.rs
backend/src/dtos/: message.rs
backend/src/handlers/: message.rs
backend/src/message/: dtos.rs  handlers.rs  mod.rs  models.rs  repository.rs  routes.rs
backend/src/models/: message.rs
backend/src/routes/: message.rs  mod.rs
frontend/: Cargo.toml  bacon.toml
migrations/2024-07-06-234805_create_messages/: up.sql
