[package]
name = "admin_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28.0", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui = { version = "0.28.0" }
egui_extras = { version = "0.28.0", features = ["default", "image"] }

env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "humantime",
] }