[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
diesel = { version = "2.2.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2.0"
dotenv = "0.15"
anyhow = "1.0.86"
rusqlite = { version = "0.31.0", features = ["bundled"] }
log = "0.4.22"